--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "stremio-internet-archive-addon",
-  "version": "1.0.5",
+  "version": "1.1.0",
   "description": "See if a movie is available on Internet Archive and play it instantly, directly from Stremio.",
   "keywords": [
     "stremio",
@@ -24,7 +24,7 @@
   "main": "addon.js",
   "scripts": {
     "test": "npm start -- --launch",
-    "update": "git pull && git commit . && git push beamup main"
+    "update": "git pull && npm ci && git commit . && git push beamup main"
   },
   "dependencies": {
     "stremio-addon-sdk": "1.0.x"
